Build a Mixed Fraction: Added level icons
Build a Mixed Fraction: Numbers: Prevent horizontal and vertical bars from being used for shapes with "ninths" divisions
# 1.01.05 (67346) Aug 24, 2012
Build a Mixed Fraction: Numbers: Fixed: whole numbers no longer centered in target cells
Build a Mixed Fraction: Numbers: Made the whole number grow when dropped in the skeleton
Build a Mixed Fraction: Numbers: Made the "whole" number part of the skeleton taller (full height of the fractional portion)
Build a Mixed Fraction: Numbers: Fixed: Level 3 "flowers" were random and not filled properly
# 1.01.04 (67332) Aug 24, 2012
Added levels 6-10
# 1.01.03 (67317) Aug 23, 2012
Build a Mixed Fraction: Numbers: Added Level 4
Addressed review issue, see #3397
Build a Mixed Fraction: Numbers: Level 2: Prevent duplicate challenges
# 1.01.02 (67235) Aug 22, 2012
Build a Mixed Fraction: Numbers: Added level 2
# 1.01.01 (67225) Aug 22, 2012
Build a Mixed Fraction: Numbers: Added level 1
# 1.01.00 (67103) Aug 17, 2012
> fraction-matcher: Added a refresh button to load new challenges for the same level
> fraction-matcher: Improved level selection screen and other UI improvements
# 1.00.43 (67099) Aug 17, 2012
Build a Fraction: Fixed green button colors with NP provided artwork
# 1.00.42 (67096) Aug 17, 2012
Fraction Matcher: When a game is over, if the "level selection screen button" is pressed, record the stars and clear the level as if the user had pressed "new game"
Build a Fraction: Numbers: Adjusted level 6 so that it has at least 3 stacks, because when there are just 2 stacks, one often has 7 cards and is too tall (and overlaps adjacent stacks and goes out of the toolbox bounds)
Build a Fraction: Numbers: Increase spacing between stacks so that tall stacks don't overlap adjacent stacks
Build a Fraction: If you get past level 5 by pressing "next" then the level selection screen will take you to the 2nd page, showing the higher levels